name:                signify-hs
version:             0.1.0.0
synopsis:            A Haskell clone of OpenBSD signify.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Marcel Fourné
maintainer:          Marcel Fourné (haskell@marcelfourne.de)
-- copyright:
category:            Cryptography
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules: Crypto.ECC.Signify
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12
                     , bytestring
                     , base64-bytestring
                     , cryptohash-sha512
                     , cryptonite
                     , eccrypto
                     , parsec
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O2
               -Wall
               -Wincomplete-uni-patterns

executable signify-hs
  main-is:             Main.hs
  other-modules:       Crypto.ECC.Signify
  -- other-extensions:
  build-depends:       base >=4.12
                     , bytestring
                     , base64-bytestring
                     , cryptohash-sha512
                     , cryptonite
                     , eccrypto
                     , filepath
--                     , MissingH
                     , optparse-applicative
                     , parsec
                     , signify-hs
  if os(windows)
     build-depends: crypto-api >=0.13 && < 0.14
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O2
               -Wall
               -Wincomplete-uni-patterns